darkened kitchen buttons when on small screen. Need to fix the other pages

--- a/proj/src/pages/Bathroom.css
+++ b/proj/src/pages/Bathroom.css
@@ -53,5 +53,10 @@
       margin-left: 20px; 
       background-color: rgba(0, 0, 0, 0.15); 
     }
+    .showerhead-section,
+    .tileitems-section {
+        background-color: #333; 
+        color: #fff; 
+      }
   }
   
